--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             },
             created() {
                 this.init([
-                    '1553239587-【译】JavaScript是如何工作的：内存管理 + 如何处理4个常见的内存泄露 + 前端进阶 + SegmentFault思否-内存',
+                    '1553239587-JavaScript是如何工作的：内存管理+如何处理4个常见的内存泄露+前端进阶+SegmentFault思否-内存',
                 ]);
             },
         })
