--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             data() {
                 return {
                     sourceList   : false,
-                    cateIndexList: false,
+                    cateIndexList: [],
                 }
             },
             methods: {
