--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         }
 
         #app {
-            padding: 20px 100px;
+            padding: 20px 5%;
         }
 
         .article-list {
@@ -115,6 +115,7 @@
             display: inline-block;
             padding: 10px 20px;
             width: 50%;
+            line-height: 1.6;
         }
 
         .article-list span {
