--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
         .article-list span {
             font-size: 12px;
         }
+
+        @media screen and (max-width: 760px) {
+            .article-list a {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 <body>
