--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         }
 
         .article-list a {
-            display: inline-block;
+            display: inline-table;
             padding: 10px 20px;
             width: 50%;
             line-height: 1.6;
